# buet-L4-T1

./: README.md
graphics-lab/Assignment-2 (Raster Based Graphics)/pipeline/: Matrix.hpp  Shapes.hpp  Vector.hpp  cmp.sh  main.cpp
graphics-lab/Assignment-3 (Ray Tracing)/pipeline/: .gitignore  1605004_Floor.h  1605004_Sphere.h  1605004_Triangle.h  1605004_bitmap_image.hpp  1605004_opengl.h
graphics-lab/offline-1/offline-1-code/: CMakeLists.txt  problem-1.cpp  problem-2.cpp  test.cpp
graphics-lab/offline-2/: a.out
graphics-lab/offline-2/bmp_image_codes/: a.out  image_drawing.cpp
graphics-lab/offline-2/pipeline/: .gitignore  Matrix.hpp  Model.hpp  Shapes.hpp  Vector.hpp  a.out  cmp.sh  main.cpp  opengl.cpp  run.sh
graphics-lab/offline-3/pipeline/: .clang-format  .exrc  1605004_General.h  1605004_Light.h  1605004_Object.h  1605004_Ray.h  1605004_Sphere.h  1605004_main.cpp  Color.h  Floor.h  General.h  Light.h  Makefile  Object.h  Ray.h  Sphere.h  Triangle.h  Vector.h  bitmap_image.hpp  d.out  main.cpp  opengl.h  r.out
security-lab/Assignment-1-AES/code/: bitvector_demo.py  main.py  out.txt
security-lab/Assignment-2 (Web Security)/: random-text.js
security-lab/Project (DHCP Starvation and Spoofing)/dhcp/: main.c  starve
security-lab/Project (DHCP Starvation and Spoofing)/ejt0062-dhcp/: Makefile
security-lab/Project (DHCP Starvation and Spoofing)/spoofing/: attacker.c  client
security-lab/Project (DHCP Starvation and Spoofing)/test/: data-types.cpp
software-lab/uiis-ui-try/: README.md  package-lock.json  package.json  quasar.conf.js
(+41 files in other folders)
